Kubernetes/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: performance-testing
  labels:
    app: curl
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["/bin/sleep", "3650d"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
