Kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: performance-testing
  labels:
    app: frontend #this label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend #this label
  template:
    metadata:
      labels:
        app: frontend #this label
    spec:
      containers:
      - name: frontend
        image: localhost:32000/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: performance-testing
  labels:
    app: frontend-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend #this label
  sessionAffinity: None
