Kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: performance-testing
  labels:
    app: redis #this label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis #this label
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: redis #this label
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: performance-testing
  labels:
    app: redis-service
spec:
  ports:
  - name: http
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis #this label
  sessionAffinity: None
