Kubernetes/worker-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-1-deployment
  namespace: performance-testing
  labels:
    app: worker-1 #this label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-1 #this label
  template:
    metadata:
      labels:
        app: worker-1 #this label
        label: worker
    spec:
      containers:
      - name: worker-1
        image: localhost:32000/worker-release:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: worker-1-service
  namespace: performance-testing
  labels:
    app: worker-1-service
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: worker-1 #this label
  sessionAffinity: None
