Kubernetes/worker-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-2-deployment
  namespace: performance-testing
  labels:
    app: worker-2 #this label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-2 #this label
  template:
    metadata:
      labels:
        app: worker-2 #this label
        label: worker
    spec:
      securityContext:
        runAsUser: 0 #101
        runAsGroup: 0 #101
        fsGroup: 0 #101
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: pv-claim
      containers:
      - name: worker-2
        image: localhost:32000/worker-release:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/home/app/Backend/Performance-Testing-Data"
          name: task-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: worker-2-service
  namespace: performance-testing
  labels:
    app: worker-2-service
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: worker-2 #this label
  sessionAffinity: None
