Kubernetes/worker-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-loadbalancer
  labels:
    app: worker-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    label: worker #this label
  sessionAffinity: None
