Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: public
  namespace: performance-testing
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /api/master(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: master-service
            port:
              number: 3000
      - path: /api/worker(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: worker-loadbalancer
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
